[client-web] Divide button in detail to groups and fixed visibility of "allocate recording" after modifying of reservation request.

--- a/shongo-client-web/src/main/resources/css/style.css
+++ b/shongo-client-web/src/main/resources/css/style.css
@@ -581,6 +581,18 @@ span.dotted {
 .space-padding > div[class*="-12"] {
   padding-left: 0px;
 }
+/* Divided button group */
+.btn-group-divided {
+  display: inline-block;
+  margin-right: 6px;
+  padding-right: 10px;
+  border-right: 2px solid #ddd;
+}
+.btn-group-divided:last-child {
+  border-right: none;
+  margin-right: 0px;
+  padding-right: 0px;
+}
 /* Pre-formatted code */
 pre {
   word-break: normal;
